# Phase-I-In-Memory-Python-Console-App

./: CLAUDE.md  README.md  constitution.md  example_agent_usage.py  pyproject.toml
.claude/: config.md
.claude/commands/: todo_management.skill
specs/: application_structure.md  task_management.md
src/phase_i_in_memory_python_console_app/: agent_skill.py  cli.py  main.py  models.py  storage.py
tests/: test_agent_skill.py  test_todo_app.py
